# libndx

./: .clang-format  CMakeLists.txt  README.md
include/ndx/: acquisition_backend.hpp  ble_backend.hpp  ble_provider.hpp  ble_state_provider.hpp  ble_types.hpp  bluetooth_backend.hpp  bluetooth_provider.hpp  bt_backend.hpp  bt_provider.hpp  ftdi_backend.hpp  ftdi_provider.hpp  ndx_ffi.hpp  ndx_ffi_impl.hpp  usb_backend.hpp  usb_provider.hpp
src/: acquisition_backend.cpp  ndx_ffi.cpp
src/ble/: ble_backend.cpp  ble_provider.cpp  ble_state_provider.cpp  ble_state_provider_mac.mm  core_bluetooth_provider.mm
src/ble/macos/: core_bluetooth_provider.mm
src/bluetooth/: bluetooth_backend.cpp
src/bt/: bt_backend.cpp
src/ftdi/: ftdi_backend.cpp  ftdi_provider.cpp
src/platform/macos/: core_bluetooth_provider.mm
src/usb/: usb_backend.cpp  usb_provider.cpp
tests/: test_ble_backend.cpp  test_ble_ffi.cpp  test_ble_provider.cpp  test_ble_state_provider.cpp  test_bluetooth_backend.cpp  test_bt_backend.cpp  test_ftdi_backend.cpp  test_ftdi_ffi.cpp  test_ndx_ffi.cpp  test_ndx_ffi_ble.cpp  test_ndx_ffi_ftdi.cpp  test_usb_backend.cpp  test_usb_ffi.cpp  test_usb_provider.cpp
tools/: discover_cyton.cpp  discover_muse.mm  run_ble_test.mm  run_govee.mm  run_muse.mm  run_muse_ble_backend.mm  run_zephyr.mm  scan_all_ble.mm
